# TempoPFN

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
data/: nan_stats.json
examples/: generate_synthetic_data.py  quick_start_tempo_pfn.ipynb  quick_start_tempo_pfn.py  utils.py
examples/gift_eval/: gift_eval_runner.py  gift_eval_submission.ipynb
gift_eval/submission/: all_results.csv  config.json
src/data/: augmentations.py  batch_composer.py  constants.py  containers.py  datasets.py  filter.py  frequency.py  loaders.py  scalers.py  time_features.py  utils.py
src/gift_eval/: __init__.py  aggregate_results.py  constants.py  core.py  data.py  evaluate.py  model_wrapper.py  predictor.py  results.py
src/models/: blocks.py  model.py
src/models/gated_deltaproduct/: README.md  __init__.py  configuration_gated_deltaproduct.py  gated_deltaproduct.py  modeling_gated_deltaproduct.py
src/optim/: lr_scheduler.py
src/plotting/: gift_eval_utils.py  plot_timeseries.py
src/synthetic_generation/: abstract_classes.py  continuous_generation.py  generator_params.py  utils.py
src/synthetic_generation/anomalies/: anomaly_generator.py  anomaly_generator_wrapper.py
src/synthetic_generation/audio_generators/: financial_volatility_generator.py  financial_volatility_wrapper.py  multi_scale_fractal_generator.py  multi_scale_fractal_wrapper.py  network_topology_generator.py  network_topology_wrapper.py  stochastic_rhythm_generator.py  stochastic_rhythm_wrapper.py  utils.py
src/synthetic_generation/augmentations/: offline_per_sample_iid_augmentations.py  offline_temp_batch_augmentations.py
src/synthetic_generation/cauker/: cauker_generator.py  cauker_generator_wrapper.py
src/synthetic_generation/forecast_pfn_prior/: forecast_pfn_generator.py  forecast_pfn_generator_wrapper.py  series_config.py  utils.py
src/synthetic_generation/gp_prior/: gp_generator.py  gp_generator_wrapper.py  utils.py
src/synthetic_generation/kernel_synth/: kernel_generator_wrapper.py  kernel_synth.py
src/synthetic_generation/ornstein_uhlenbeck_process/: ou_generator.py  ou_generator_wrapper.py
src/synthetic_generation/sawtooth/: __init__.py  sawtooth_generator.py  sawtooth_generator_wrapper.py
src/synthetic_generation/sine_waves/: sine_wave_generator.py  sine_wave_generator_wrapper.py
src/synthetic_generation/spikes/: spikes_generator.py  spikes_generator_wrapper.py
src/training/: trainer_dist.py
src/utils/: utils.py
(+2 files in other folders)
